# nova

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: ci-cd.yml
app/api/: main.py  routes_auth.py  routes_chat.py  routes_conversations.py  sse.py
app/audit/: events.py  logger.py
app/auth/: base.py  deps.py  stub.py
app/config/: logging_config.py  settings.py
app/graph/: builder.py  nodes.py  prompts.py  state.py
app/memory/: cache.py  store.py
app/tools/: azure_search.py  errors.py  kibana.py  knowledge_base.py  schemas.py
app/ui/: api.py  sse_client.py  state.py  streamlit_app.py
app/ui/pages/: _chat.py  enduser.py  ombuds.py
app/ui/views/: _chat.py  enduser.py  login.py  ombuds.py
tests/: conftest.py
tests/integration/: test_api_auth.py  test_chat_stream.py
tests/unit/: test_audit.py  test_auth_stub.py  test_graph_router.py  test_memory_cache.py  test_memory_store.py  test_sse_client.py  test_tools_azure_search.py  test_tools_kibana.py  test_tools_knowledge_base.py
