[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-ombuds-assistant"
version = "0.1.0"
description = "Enterprise AI Ombuds Assistant — LangGraph agent behind a FastAPI SSE endpoint with a Streamlit UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Colruyt Group" }]
dependencies = [
    # Web / API
    "fastapi>=0.115",
    "sse-starlette>=2.1",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    # UI
    "streamlit>=1.36",
    # Config / models
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Auth
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",  # passlib 1.7.4 pins <4.1
    "python-jose[cryptography]>=3.3",
    # Observability
    "structlog>=24.1",
    # Retries
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-jose>=3.3",
    "types-passlib>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# B008: FastAPI `Depends(...)` in argument defaults is the framework's canonical pattern.
# RUF001: allow the en-dash in prose docstrings and fixture text.
# SIM105: `try/except/pass` is clearer than `contextlib.suppress` in short local blocks.
# SIM117: nested `with` around an httpx client + `client.stream(...)` is intentional (different lifecycles).
ignore = ["E501", "B008", "RUF001", "SIM105", "SIM117"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict_optional = true
ignore_missing_imports = true
disallow_untyped_defs = false
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
